# Intercity-BusTime-Prediction

./: .gitignore  README.md  fetch_data.py  main.py  pyproject.toml  to_do.md
.devcontainer/: devcontainer.json
archive/: GPS_dataset_EDA.ipynb  fetch_data.py
model_training/: model_evaluation.ipynb  model_training.py  train.py
notebooks/: 01_initial_ETL.ipynb  02_initial_EDA.ipynb  03_single_route_model.ipynb  04_singe_route_prediction.ipynb
phase_one_notebooks/: 02_initial_EDA.ipynb  04_singe_route_prediction.ipynb
phase_two_notebooks/: 01_routes_stops_selection.ipynb  02_ideal_tolerance.ipynb  03_prepare_ML_data.ipynb  04_model_training.py  04_modeling_training.ipynb  try.ipynb
raw_data/: sample.csv
src/: 01_initial_ETL.ipynb  02_initial_EDA.ipynb  03_quantile_travel_time.ipynb  04_GPS_EDA.ipynb  06_predictions.ipynb  constants.py  demo_app.py  demo_app_css.py  deployment_helpers.py  fetch_data.py  helpers.py  initial_EDA.ipynb  try.ipynb
streamlit_app/: app.py  app_cli.py  app_css.py  deployment_helpers.py  mean_travel_time_encoding.json  requirements.txt  stops_dict.json  target_routes.json  target_routes_app.json  target_stops.json
streamlit_demo/: demo_app.py  demo_model_1728.txt  requirements.txt
