[project]
name = "04-bustime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holidays>=0.92",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "plotly[express]>=6.5.2",
    "polars>=1.38.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
