[project]
name = "04-bustime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holidays>=0.92",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "plotly[express]>=6.5.2",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]
